<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.dicoding.myappp.ui.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/upcoming_fragment"
        android:name="com.dicoding.myappp.ui.fragment.UpcomingFragment"
        android:label="@string/menu_upcoming"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/finished_fragment"
        android:name="com.dicoding.myappp.ui.fragment.FinishedFragment"
        android:label="@string/menu_finished"
        tools:layout="@layout/fragment_finished" />

</navigation>
